# BOUNDING-BOX-CPP

./: CMakeLists.txt  Dockerfile  README.md  Untitled.ipynb  com-run.sh  main.cpp
public/: index.html
public/scripts/: index.js
